--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-inline": "^0.3.2",
     "stringify": "^2.2.0"
   }
 }
